# SIU-2018

./: README.md
cpp_feature/: CMakeLists.txt  Doxyfile  README.md  build.sh
cpp_feature/scripts/: compute_features_parallel.py
cpp_feature/src/: feature_computation.hpp  main_feature.cpp  parser.cpp  parser.hpp  utils.cpp  utils.hpp
cpp_feature/src/feature/: computer.cpp  computer.hpp  constants.cpp  constants.hpp  player.cpp  player.hpp  row.cpp  row.hpp  stats.hpp
cpp_feature/src/feature/stats/: avg_min_max_stats.cpp  avg_min_max_stats.hpp  cluster_stats.cpp  cluster_stats.hpp  convex_stats.cpp  convex_stats.hpp  distance_stats.cpp  distance_stats.hpp  dkm_utils.cpp  dkm_utils.hpp  linearity_stats.cpp  linearity_stats.hpp  player_mixing_stats.cpp  player_mixing_stats.hpp  referee_stats.cpp  referee_stats.hpp  speed.cpp  speed.hpp
cpp_feature/test/: include_catch.cpp  test_parser.cpp  test_utils.cpp
cpp_feature/test/feature/: test_computer.cpp  test_player.cpp  test_row.cpp
cpp_feature/test/feature/stats/: test_avg_min_max_stats.cpp  test_cluster_stats.cpp  test_convex_stats.cpp  test_distance_stats.cpp  test_dkm_utils.cpp  test_linearity_stats.cpp  test_player_mixing_stats.cpp  test_referee_stats.cpp  test_speed.cpp
notebooks/: README.md  classifier_testing.ipynb  dataset_construction.ipynb  feature_analysis.ipynb  feature_construction.ipynb  feature_selection.ipynb  feature_selection_sampling.ipynb  hasball_from_raw.ipynb  match_visualization.ipynb  model_optimization.ipynb  model_to_pmml.ipynb  pickle_to_csv.ipynb  requirements.ipynb  try_clustering_features.ipynb  utils.py
